objects/Support_Request_FS_CS__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Eligible_BG__c</fullName>
        <label>Eligible BG</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_Eligible_Countries__c</fullName>
        <description>Enter the countries which will route to standard layout instead of VF page</description>
        <label>Non Eligible Sub Region</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PunchOut_BG__c</fullName>
        <label>PunchOut BG</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <label>RecordType Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_SubType__c</fullName>
        <label>Request SubType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType_Detail__c</fullName>
        <label>SubType Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SupportReqType__c</fullName>
        <label>SupportReqType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Detail__c</fullName>
        <label>Type Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>View_VF_Page_Name__c</fullName>
        <label>View VF Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visualforce_Page_Name__c</fullName>
        <label>Visualforce Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isBG_Specific_RecordType__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBG Specific RecordType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isVisualforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isVisualforce</label>
        <type>Checkbox</type>
    </fields>
    <label>Support Request FieldSet Mapper</label>
</CustomObject>